# media-auth-forensics

./: .dockerignore  API_SPEC.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.txt  Dockerfile  EVALUATION.md  HOW_TO_RUN.txt  Makefile  README.md  ReadmeforError.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml  requirements.txt  the luggage has two handles remove the bottom one and also accommodate a place for the equipment in the luggage
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md
scripts/: train_ffpp_xception.py
src/media_auth_forensics/: cli.py
src/media_auth_forensics/infer/: region_scan.py  temporal.py
src/media_auth_forensics/infer/src/media_auth_forensics/infer/: adversarial.py
src/media_auth_forensics/infer/src/media_auth_forensics/infer/src/media_auth_forensics/models/: xception_forensics.py
src/media_auth_forensics/infer/src/media_auth_forensics/infer/src/media_auth_forensics/models/src/media_auth_forensics/models/: model_identifier.py
src/media_auth_forensics/infer/src/media_auth_forensics/infer/src/media_auth_forensics/models/src/media_auth_forensics/models/src/media_auth_forensics/infer/: pipeline.py
src/media_auth_forensics/src/media_auth_forensics/detection/: retinaface_wrapper.py
src/media_auth_forensics/utils/: io.py
tests/: test_region_scan.py  test_temporal.py
